Fix profile stretching

--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,8 @@ h5 a:active {
   margin-left:-45px;
 }
 .picture {
-  height:275px;
   width:340px;
+  height: auto;
   padding-left:40px;
 }
 br {
